Fix file upload overflow

--- a/src/subtitulamos/resources/assets/css/upload.scss
+++ b/src/subtitulamos/resources/assets/css/upload.scss
@@ -102,6 +102,7 @@
       top: 0;
       left: 0;
       opacity: 0;
+      overflow: hidden;
     }
 
     #file-upload-instructions {
